[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/QuestPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/images/iconsitems/food_old.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/craftgui/Time.png" type="Texture" id=3]

[node name="QuestPanel" type="Panel"]
margin_left = 295.71
margin_top = 135.984
margin_right = 1563.71
margin_bottom = 963.984
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 41.0
margin_top = 75.0
margin_right = 375.0
margin_bottom = 731.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 334.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 334.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true

[node name="QuestDescript" type="RichTextLabel" parent="."]
margin_left = 574.0
margin_top = 67.0
margin_right = 1125.0
margin_bottom = 329.0
bbcode_enabled = true
text = "Test Text"

[node name="CompleteButton" type="Button" parent="."]
margin_left = 886.538
margin_top = 669.553
margin_right = 1103.54
margin_bottom = 714.553
text = "Complete"

[node name="CancelButton" type="Button" parent="."]
margin_left = 886.538
margin_top = 748.553
margin_right = 1103.54
margin_bottom = 793.553
text = "Forfeit"

[node name="reqs" type="HBoxContainer" parent="."]
margin_left = 536.72
margin_top = 388.72
margin_right = 1146.72
margin_bottom = 463.72

[node name="Button" type="TextureRect" parent="reqs"]
visible = false
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="amount" type="Label" parent="reqs/Button"]
visible = false
margin_left = 33.5211
margin_top = 51.5712
margin_right = 73.5211
margin_bottom = 75.5712
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 2

[node name="rewards" type="HBoxContainer" parent="."]
margin_left = 536.72
margin_top = 548.72
margin_right = 1146.72
margin_bottom = 623.72

[node name="Button" type="TextureRect" parent="rewards"]
visible = false
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="amount" type="Label" parent="rewards/Button"]
visible = false
margin_left = 33.5211
margin_top = 51.5712
margin_right = 73.5211
margin_bottom = 75.5712
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 2

[node name="Label" type="Label" parent="."]
margin_left = 614.201
margin_top = 337.728
margin_right = 1087.2
margin_bottom = 361.728
text = "Requirements"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 614.201
margin_top = 497.728
margin_right = 1087.2
margin_bottom = 521.728
text = "Rewards"
align = 1

[node name="Time" type="TextureRect" parent="."]
margin_left = 554.701
margin_top = 712.971
margin_right = 594.701
margin_bottom = 764.971
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Time"]
margin_left = 45.6711
margin_top = 17.499
margin_right = 140.671
margin_bottom = 41.499
text = "Time"
